<resources>
    <string name="app_name">GPSTimer</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="unit">Unit of measure</string>
    <string name="unitkmh" translatable="false">km/h</string>
    <string name="unitmph" translatable="false">mph</string>
    <string name="measurement">Speed measurement</string>
    <string name="startSpeed">Start Speed</string>
    <string name="targetSpeed">Target Speed</string>
    <string name="minus10" translatable="false">-10</string>
    <string name="plus10" translatable="false">+10</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="sortLowTime">Lowest Time</string>
    <string name="sortHighTime">Highest Time</string>
    <string name="sortMostRec">Most Recent</string>
    <string name="sortLeastRec">Least Recent</string>
    <string name="sortBy">Sort by:</string>
    <string name="filter">Filter</string>
    <string name="go_back">Go back</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="vehicles">Vehicles</string>
    <string name="selectVehicle">Select Vehicle</string>
    <string name="addVehicle">Add Vehicle</string>
</resources>