<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222831"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:contentDescription="@string/go_back"
        android:scaleType="center"
        android:tint="@color/textColor"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textViewSelectVehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/textColor"
        android:textSize="52sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchUnitSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primaryAccent"
            android:checked="true"
            android:text="@string/unitkmh"
            android:textColor="@color/textColor"
            android:textSize="24sp"
            android:thumbTint="@color/primaryAccent"
            android:trackTint="@color/textColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measurement"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startSpeed"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMinusStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryAccent"
                android:text="@string/minus10"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:iconTint="@color/textColor" />

            <EditText
                android:id="@+id/editStartSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:autofillHints="50"
                android:backgroundTint="@color/textColor"
                android:ems="10"
                android:hint="@string/startSpeed"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlusStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryAccent"
                android:text="@string/plus10"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:iconTint="@color/textColor" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/targetSpeed"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMinusTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryAccent"
                android:text="@string/minus10"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:iconTint="@color/textColor" />

            <EditText
                android:id="@+id/editTargetSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:autofillHints="100"
                android:backgroundTint="@color/textColor"
                android:ems="10"
                android:hint="@string/targetSpeed"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlusTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/primaryAccent"
                android:text="@string/plus10"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:iconTint="@color/textColor" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryAccent"
        android:text="@string/selectVehicle"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:icon="@drawable/ic_baseline_directions_car_24" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btnLeaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryAccent"
        android:text="@string/leaderboard"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:icon="@drawable/ic_baseline_dehaze_24" />

</LinearLayout>