<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222831"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:contentDescription="@string/go_back"
        android:scaleType="center"
        android:tint="@color/textColor"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/textColor"
        android:textSize="52sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textColor"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startSpeed"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editFilterStartMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="50"
                android:backgroundTint="@color/textColor"
                android:ems="5"
                android:hint="@string/from"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editFilterStartMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="50"
                android:backgroundTint="@color/textColor"
                android:ems="5"
                android:hint="@string/to"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/targetSpeed"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editFilterTargetMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="50"
                android:backgroundTint="@color/textColor"
                android:ems="5"
                android:hint="@string/from"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editFilterTargetMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="50"
                android:backgroundTint="@color/textColor"
                android:ems="5"
                android:hint="@string/to"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/recyclerview_filteritem" />

</LinearLayout>